# holebench

./: .gitignore  Cargo.toml  README.md  test.sh
src/: cli.rs  io.rs  junk.rs  main.rs  ringbuf.rs
src/backend/: io_uring.rs  mmap.rs  mod.rs  sync.rs
src/cli/: bytes_cnt.rs
