[package]
name = "holebench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
io-uring = "0.6.3"
libc = "0.2.153"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.9.0"
slab = "0.4.9"
